implemented style, content for footer and interests

--- a/src/stylesheets/Interests.module.css
+++ b/src/stylesheets/Interests.module.css
@@ -1,11 +1,11 @@
-.about {
+.interests {
 	display: flex;
 	background-color: #fefff0;
 	flex-direction: column;
 	justify-content: center;
 	text-align: left;
 	width: 300px;
-	padding: 0 25px 23px 25px;
+	padding: 0 25px 48px 25px;
 }
 
 .header {
