--- a/src/stylesheets/Info.module.css
+++ b/src/stylesheets/Info.module.css
@@ -13,7 +13,7 @@
 }
 
 .bio {
-	background-color: #f5f5f5;
+	background-color: #fefff0;
 	padding-bottom: 32px;
 	padding-top: 20px;
 }
@@ -34,7 +34,8 @@
 .small {
 	margin: 0;
 	padding-top: 10px;
-	color: #4a4e74;
+	padding-bottom: 10px;
+	color: #000000;
 	font-size: 12px;
 }
 
@@ -47,18 +48,32 @@
 	display: inline-block;
 	align-items: center;
 	border: 1px solid #d1d5db;
-	color: #374151;
+	color: #000000;
 	padding: 10px 20px;
 	font-size: 16px;
 	border-radius: 10px;
 	cursor: pointer;
 }
+.portfolio {
+	padding-top: 10px;
+	background-color: #ffe0fa;
+	color: #000000;
+}
 
-.email:hover,
-.email:focus,
 .portfolio:hover,
 .portfolio:focus {
-	background-color: #575454;
+	background-color: #fc97eb;
+	color: #ffffff;
+}
+
+.email {
+	background-color: #decaf9;
+	color: #000000;
+}
+
+.email:hover,
+.email:focus {
+	background-color: #c6a0fa;
 	color: #ffffff;
 }
 
@@ -69,12 +84,13 @@
 }
 
 .linkedin {
-	background-color: #7ab6ff;
-	color: #ffffff;
+	background-color: #9ec8fc;
+	color: #000000;
 	margin-left: 17px;
 }
 
 .linkedin:hover,
 .linkedin:focus {
-	background-color: #1c559b;
+	background-color: #2984f4;
+	color: #ffffff;
 }
