--- a/src/stylesheets/Footer.module.css
+++ b/src/stylesheets/Footer.module.css
@@ -1,16 +1,16 @@
 .footer {
 	display: flex;
-	background-color: #d5d4d8;
+	background-color: #e2e1e4;
 	justify-content: center;
 	align-items: center;
-	width: 300px;
 	border-bottom-right-radius: 25px;
 	border-bottom-left-radius: 25px;
+	width: 100%;
 }
 
 .social {
 	display: flex;
-	gap: 70px;
+	gap: 10px;
 	padding: 20px;
 }
 
